fix: add more spacing to icon names

--- a/src/components/Landing/ServiceSection/service-section.module.css
+++ b/src/components/Landing/ServiceSection/service-section.module.css
@@ -36,7 +36,7 @@
     text-align: center;
     font-weight: 500;
     font-size: var(--text-xl);
-    margin-top: 1.5rem;
+    margin-top: 3rem;
 }
 
 .serviceImage {
